@@ -25,7 +25,7 @@ import static org.apache.accumulo.core.client.admin.servers.ServerId.Type.SCAN_S
 import static org.apache.accumulo.core.client.admin.servers.ServerId.Type.TABLET_SERVER;
 
 import java.net.InetAddress;
-import java.net.URL;
+import java.net.URI;
 import java.net.UnknownHostException;
 import java.util.Arrays;
 import java.util.Collection;
@@ -46,12 +46,9 @@ import java.util.function.Supplier;
 import jakarta.inject.Singleton;
 
 import org.apache.accumulo.core.Constants;
-import org.apache.accumulo.core.cli.ConfigOpts;
+import org.apache.accumulo.core.cli.ServerOpts;
 import org.apache.accumulo.core.client.admin.servers.ServerId;
 import org.apache.accumulo.core.client.admin.servers.ServerId.Type;
-import org.apache.accumulo.core.compaction.thrift.CompactionCoordinatorService;
-import org.apache.accumulo.core.compaction.thrift.TExternalCompaction;
-import org.apache.accumulo.core.compaction.thrift.TExternalCompactionMap;
 import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.fate.zookeeper.ZooReaderWriter;
 import org.apache.accumulo.core.fate.zookeeper.ZooUtil.NodeExistsPolicy;
@@ -66,7 +63,6 @@ import org.apache.accumulo.core.manager.thrift.ManagerClientService;
 import org.apache.accumulo.core.manager.thrift.ManagerMonitorInfo;
 import org.apache.accumulo.core.manager.thrift.TableInfo;
 import org.apache.accumulo.core.manager.thrift.TabletServerStatus;
-import org.apache.accumulo.core.metadata.schema.ExternalCompactionId;
 import org.apache.accumulo.core.metrics.MetricsInfo;
 import org.apache.accumulo.core.rpc.ThriftUtil;
 import org.apache.accumulo.core.rpc.clients.ThriftClientTypes;
@@ -78,20 +74,17 @@ import org.apache.accumulo.core.trace.TraceUtil;
 import org.apache.accumulo.core.util.Pair;
 import org.apache.accumulo.core.util.threads.Threads;
 import org.apache.accumulo.monitor.next.InformationFetcher;
-import org.apache.accumulo.monitor.rest.compactions.external.ExternalCompactionInfo;
-import org.apache.accumulo.monitor.rest.compactions.external.RunningCompactions;
-import org.apache.accumulo.monitor.rest.compactions.external.RunningCompactorDetails;
+import org.apache.accumulo.monitor.rest.bulkImports.BulkImport;
+import org.apache.accumulo.monitor.rest.bulkImports.BulkImportInformation;
 import org.apache.accumulo.server.AbstractServer;
-import org.apache.accumulo.server.HighlyAvailableService;
 import org.apache.accumulo.server.ServerContext;
 import org.apache.accumulo.server.util.TableInfoUtil;
-import org.apache.thrift.transport.TTransportException;
+import org.apache.accumulo.server.util.bulkCommand.ListBulk;
 import org.apache.zookeeper.KeeperException;
+import org.eclipse.jetty.ee10.servlet.ResourceServlet;
+import org.eclipse.jetty.ee10.servlet.ServletHolder;
 import org.eclipse.jetty.io.Connection;
 import org.eclipse.jetty.io.ConnectionStatistics;
-import org.eclipse.jetty.servlet.DefaultServlet;
-import org.eclipse.jetty.servlet.ServletHolder;
-import org.eclipse.jetty.util.resource.Resource;
 import org.glassfish.hk2.api.Factory;
 import org.glassfish.hk2.utilities.binding.AbstractBinder;
 import org.glassfish.jersey.jackson.JacksonFeature;
@@ -103,13 +96,14 @@ import org.glassfish.jersey.servlet.ServletContainer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.google.common.base.Preconditions;
 import com.google.common.base.Suppliers;
 import com.google.common.net.HostAndPort;
 
 /**
  * Serve manager statistics with an embedded web server.
  */
-public class Monitor extends AbstractServer implements HighlyAvailableService, Connection.Listener {
+public class Monitor extends AbstractServer implements Connection.Listener {
 
   private static final Logger log = LoggerFactory.getLogger(Monitor.class);
   private static final int REFRESH_TIME = 5;
@@ -117,12 +111,10 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
   private final long START_TIME;
 
   public static void main(String[] args) throws Exception {
-    try (Monitor monitor = new Monitor(new ConfigOpts(), args)) {
-      monitor.runServer();
-    }
+    AbstractServer.startServer(new Monitor(new ServerOpts(), args), log);
   }
 
-  Monitor(ConfigOpts opts, String[] args) {
+  Monitor(ServerOpts opts, String[] args) {
     super(ServerId.Type.MONITOR, opts, ServerContext::new, args);
     START_TIME = System.currentTimeMillis();
     this.connStats = new ConnectionStatistics();
@@ -140,7 +132,6 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
   private long totalHoldTime = 0;
   private long totalLookups = 0;
   private int totalTables = 0;
-  private final AtomicBoolean monitorInitialized = new AtomicBoolean(false);
 
   private EventCounter lookupRateTracker = new EventCounter();
   private EventCounter indexCacheHitTracker = new EventCounter();
@@ -152,8 +143,6 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
   private ManagerMonitorInfo mmi;
   private GCStatus gcStatus;
   private volatile Optional<HostAndPort> coordinatorHost = Optional.empty();
-  private final String coordinatorMissingMsg =
-      "Error getting the compaction coordinator client. Check that the Manager is running.";
 
   private EmbeddedWebServer server;
   private int livePort = 0;
@@ -227,7 +216,7 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
       return;
     }
     // DO NOT ADD CODE HERE that could throw an exception before we enter the try block
-    // Otherwise, we'll never release the lock by unsetting 'fetching' in the the finally block
+    // Otherwise, we'll never release the lock by unsetting 'fetching' in the finally block
     try {
       while (retry) {
         ManagerClientService.Client client = null;
@@ -360,11 +349,15 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
   public void run() {
     ServerContext context = getContext();
     int[] ports = getConfiguration().getPort(Property.MONITOR_PORT);
+    String rootContext = getConfiguration().get(Property.MONITOR_ROOT_CONTEXT);
+    // Needs leading slash in order to property create rest endpoint requests
+    Preconditions.checkArgument(rootContext.startsWith("/"),
+        "Root context: \"%s\" does not have a leading '/'", rootContext);
     for (int port : ports) {
       try {
         log.debug("Trying monitor on port {}", port);
         server = new EmbeddedWebServer(this, port);
-        server.addServlet(getDefaultServlet(), "/resources/*");
+        server.addServlet(getResourcesServlet(), "/resources/*");
         server.addServlet(getRestServlet(), "/rest/*");
         server.addServlet(getRestV2Servlet(), "/rest-v2/*");
         server.addServlet(getViewServlet(), "/*");
@@ -379,18 +372,25 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
       throw new RuntimeException(
           "Unable to start embedded web server on ports: " + Arrays.toString(ports));
     } else {
-      log.debug("Monitor started on port {}", livePort);
+      log.debug("Monitor listening on {}:{}", server.getHostName(), livePort);
     }
 
-    String advertiseHost = getHostname();
-    if (advertiseHost.equals("0.0.0.0")) {
-      try {
-        advertiseHost = InetAddress.getLocalHost().getHostName();
-      } catch (UnknownHostException e) {
-        log.error("Unable to get hostname", e);
+    HostAndPort advertiseAddress = getAdvertiseAddress();
+    if (advertiseAddress == null) {
+      // use the bind address from the connector, unless it's null or 0.0.0.0
+      String advertiseHost = server.getHostName();
+      if (advertiseHost == null || advertiseHost == ServerOpts.BIND_ALL_ADDRESSES) {
+        try {
+          advertiseHost = InetAddress.getLocalHost().getHostName();
+        } catch (UnknownHostException e) {
+          throw new RuntimeException("Unable to get hostname for advertise address", e);
+        }
       }
+      updateAdvertiseAddress(HostAndPort.fromParts(advertiseHost, livePort));
+    } else {
+      updateAdvertiseAddress(HostAndPort.fromParts(advertiseAddress.getHost(), livePort));
     }
-    HostAndPort monitorHostAndPort = HostAndPort.fromParts(advertiseHost, livePort);
+    HostAndPort monitorHostAndPort = getAdvertiseAddress();
     log.debug("Using {} to advertise monitor location in ZooKeeper", monitorHostAndPort);
 
     try {
@@ -406,19 +406,24 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
     metricsInfo.init(MetricsInfo.serviceTags(getContext().getInstanceName(), getApplicationName(),
         monitorHostAndPort, getResourceGroup()));
 
+    // Needed to support the existing zk monitor address format
+    if (!rootContext.endsWith("/")) {
+      rootContext = rootContext + "/";
+    }
     try {
-      URL url = new URL(server.isSecure() ? "https" : "http", advertiseHost, server.getPort(), "/");
+      var uri = new URI(server.isSecure() ? "https" : "http", null, monitorHostAndPort.getHost(),
+          server.getPort(), rootContext, null, null);
       final ZooReaderWriter zoo = context.getZooSession().asReaderWriter();
       // Delete before we try to re-create in case the previous session hasn't yet expired
       zoo.delete(Constants.ZMONITOR_HTTP_ADDR);
-      zoo.putEphemeralData(Constants.ZMONITOR_HTTP_ADDR, url.toString().getBytes(UTF_8));
-      log.info("Set monitor address in zookeeper to {}", url);
+      zoo.putEphemeralData(Constants.ZMONITOR_HTTP_ADDR, uri.toString().getBytes(UTF_8));
+      log.info("Set monitor address in zookeeper to {}", uri);
     } catch (Exception ex) {
       log.error("Unable to advertise monitor HTTP address in zookeeper", ex);
     }
 
     // need to regularly fetch data so plot data is updated
-    Threads.createThread("Data fetcher", () -> {
+    Threads.createCriticalThread("Data fetcher", () -> {
       while (true) {
         try {
           fetchData();
@@ -428,9 +433,7 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
         sleepUninterruptibly(333, TimeUnit.MILLISECONDS);
       }
     }).start();
-    Threads.createThread("Metric Fetcher Thread", fetcher).start();
-
-    monitorInitialized.set(true);
+    Threads.createCriticalThread("Metric Fetcher Thread", fetcher).start();
 
     while (!isShutdownRequested()) {
       if (Thread.currentThread().isInterrupted()) {
@@ -449,15 +452,12 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
     log.info("stop requested. exiting ... ");
   }
 
-  private ServletHolder getDefaultServlet() {
-    return new ServletHolder(new DefaultServlet() {
-      private static final long serialVersionUID = 1L;
-
-      @Override
-      public Resource getResource(String pathInContext) {
-        return Resource.newClassPathResource("/org/apache/accumulo/monitor" + pathInContext);
-      }
-    });
+  private ServletHolder getResourcesServlet() {
+    ServletHolder holder = new ServletHolder("resources", ResourceServlet.class);
+    holder.setInitParameter("dirAllowed", "false");
+    holder.setInitParameter("baseResource",
+        Monitor.class.getResource("resources").toExternalForm());
+    return holder;
   }
 
   public static class MonitorFactory extends AbstractBinder implements Factory<Monitor> {
@@ -555,12 +555,8 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
   private final Supplier<Map<HostAndPort,CompactionStats>> compactionsSupplier =
       Suppliers.memoizeWithExpiration(this::fetchCompactions, expirationTimeMinutes, MINUTES);
 
-  private final Supplier<ExternalCompactionInfo> compactorInfoSupplier =
-      Suppliers.memoizeWithExpiration(this::fetchCompactorsInfo, expirationTimeMinutes, MINUTES);
-
-  private final Supplier<ExternalCompactionsSnapshot> externalCompactionsSupplier =
-      Suppliers.memoizeWithExpiration(this::computeExternalCompactionsSnapshot,
-          expirationTimeMinutes, MINUTES);
+  private final Supplier<BulkImport> bulkImportSupplier =
+      Suppliers.memoizeWithExpiration(this::computeBulkImports, expirationTimeMinutes, MINUTES);
 
   /**
    * @return active tablet server scans. Values are cached and refresh after
@@ -585,36 +581,18 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
     return compactionsSupplier.get();
   }
 
-  /**
-   * @return external compaction information. Values are cached and refresh after
-   *         {@link #expirationTimeMinutes}.
-   */
-  public ExternalCompactionInfo getCompactorsInfo() {
-    if (coordinatorHost.isEmpty()) {
-      throw new IllegalStateException("Tried fetching from compaction coordinator that's missing");
-    }
-    return compactorInfoSupplier.get();
+  private BulkImport computeBulkImports() {
+    BulkImport bulkImport = new BulkImport();
+    ListBulk.list(getContext(), bulkStatus -> {
+      bulkImport.addBulkImport(
+          new BulkImportInformation(bulkStatus.sourceDir(), bulkStatus.lastUpdate().toEpochMilli(),
+              bulkStatus.state(), bulkStatus.tableId(), bulkStatus.fateId()));
+    });
+    return bulkImport;
   }
 
-  /**
-   * @return running compactions. Values are cached and refresh after
-   *         {@link #expirationTimeMinutes}.
-   */
-  public RunningCompactions getRunningCompactions() {
-    return externalCompactionsSupplier.get().runningCompactions;
-  }
-
-  /**
-   * @return running compactor details. Values are cached and refresh after
-   *         {@link #expirationTimeMinutes}.
-   */
-  public RunningCompactorDetails getRunningCompactorDetails(ExternalCompactionId ecid) {
-    TExternalCompaction extCompaction =
-        externalCompactionsSupplier.get().ecRunningMap.get(ecid.canonical());
-    if (extCompaction == null) {
-      return null;
-    }
-    return new RunningCompactorDetails(extCompaction);
+  public BulkImport getBulkImports() {
+    return bulkImportSupplier.get();
   }
 
   private Map<HostAndPort,ScanStats> fetchScans(Collection<ServerId> servers) {
@@ -661,54 +639,6 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
       }
     }
     return Collections.unmodifiableMap(allCompactions);
-  }
-
-  private ExternalCompactionInfo fetchCompactorsInfo() {
-    Set<ServerId> compactors =
-        getContext().instanceOperations().getServers(ServerId.Type.COMPACTOR);
-    log.debug("Found compactors: {}", compactors);
-    ExternalCompactionInfo ecInfo = new ExternalCompactionInfo();
-    ecInfo.setFetchedTimeMillis(System.currentTimeMillis());
-    ecInfo.setCompactors(compactors);
-    ecInfo.setCoordinatorHost(coordinatorHost);
-    return ecInfo;
-  }
-
-  private static class ExternalCompactionsSnapshot {
-    public final RunningCompactions runningCompactions;
-    public final Map<String,TExternalCompaction> ecRunningMap;
-
-    private ExternalCompactionsSnapshot(Optional<Map<String,TExternalCompaction>> ecRunningMapOpt) {
-      this.ecRunningMap =
-          ecRunningMapOpt.map(Collections::unmodifiableMap).orElse(Collections.emptyMap());
-      this.runningCompactions = new RunningCompactions(this.ecRunningMap);
-    }
-  }
-
-  private ExternalCompactionsSnapshot computeExternalCompactionsSnapshot() {
-    if (coordinatorHost.isEmpty()) {
-      throw new IllegalStateException(coordinatorMissingMsg);
-    }
-    var ccHost = coordinatorHost.orElseThrow();
-    log.info("User initiated fetch of running External Compactions from {}", ccHost);
-    try {
-      CompactionCoordinatorService.Client client =
-          ThriftUtil.getClient(ThriftClientTypes.COORDINATOR, ccHost, getContext());
-      TExternalCompactionMap running;
-      try {
-        running = client.getRunningCompactions(TraceUtil.traceInfo(), getContext().rpcCreds());
-        return new ExternalCompactionsSnapshot(Optional.ofNullable(running.getCompactions()));
-      } catch (Exception e) {
-        throw new IllegalStateException("Unable to get running compactions from " + ccHost, e);
-      } finally {
-        if (client != null) {
-          ThriftUtil.returnClient(client, getContext());
-        }
-      }
-    } catch (TTransportException e) {
-      log.error("Unable to get Compaction coordinator at {}", ccHost);
-      throw new IllegalStateException(coordinatorMissingMsg, e);
-    }
   }
 
   /**
@@ -823,11 +753,6 @@ public class Monitor extends AbstractServer implements HighlyAvailableService, C
 
   public double getLookupRate() {
     return lookupRateTracker.calculateRate();
-  }
-
-  @Override
-  public boolean isActiveService() {
-    return monitorInitialized.get();
   }
 
   public Optional<HostAndPort> getCoordinatorHost() {
