@@ -34,7 +34,6 @@ import java.io.BufferedWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collection;
@@ -51,13 +50,15 @@ import org.apache.accumulo.core.client.AccumuloClient;
 import org.apache.accumulo.core.client.AccumuloException;
 import org.apache.accumulo.core.client.AccumuloSecurityException;
 import org.apache.accumulo.core.client.TableNotFoundException;
+import org.apache.accumulo.core.conf.Property;
 import org.apache.accumulo.core.data.TableId;
+import org.apache.accumulo.core.iterators.IteratorUtil;
 import org.apache.accumulo.core.util.TextUtil;
 import org.apache.accumulo.harness.MiniClusterConfigurationCallback;
 import org.apache.accumulo.harness.SharedMiniClusterBase;
 import org.apache.accumulo.miniclusterImpl.MiniAccumuloConfigImpl;
-import org.apache.accumulo.server.conf.store.PropStore;
 import org.apache.accumulo.server.conf.store.TablePropKey;
+import org.apache.accumulo.test.util.Wait;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.io.Text;
@@ -91,9 +92,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
 
   @BeforeEach
   public void setupShell() throws Exception {
-    ts = new MockShell(getPrincipal(), getRootPassword(),
-        getCluster().getConfig().getInstanceName(), getCluster().getConfig().getZooKeepers(),
-        getCluster().getConfig().getClientPropsFile());
+    ts = new MockShell(getCluster().getConfig().getClientPropsFile());
   }
 
   @AfterAll
@@ -299,7 +298,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -320,7 +319,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -341,7 +340,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -362,7 +361,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -383,7 +382,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -404,7 +403,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -425,7 +424,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -444,7 +443,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       assertThrows(TableNotFoundException.class,
           () -> client.tableOperations().listSplits(tableName));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -502,7 +501,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -523,7 +522,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -544,7 +543,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -565,7 +564,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -586,7 +585,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -607,7 +606,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -628,7 +627,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       Collection<Text> createdSplits = client.tableOperations().listSplits(tableName);
       assertEquals(expectedSplits, new TreeSet<>(createdSplits));
     } finally {
-      Files.delete(Paths.get(splitsFile));
+      Files.delete(Path.of(splitsFile));
     }
   }
 
@@ -654,7 +653,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     verifyTableWithTabletAvailability(createCmd, tables[2], "UNHOSTED", 1);
 
     String splitsFile = System.getProperty("user.dir") + "/target/splitsFile";
-    Path splitFilePath = Paths.get(splitsFile);
+    Path splitFilePath = Path.of(splitsFile);
     try {
       generateSplitsFile(splitsFile, 10, 12, false, false, true, false, false);
       createCmd = "createtable " + tables[3] + " -a Hosted -sf " + splitsFile;
@@ -693,7 +692,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
 
   private SortedSet<Text> readSplitsFromFile(final String splitsFile) throws IOException {
     SortedSet<Text> splits = new TreeSet<>();
-    try (BufferedReader reader = newBufferedReader(Paths.get(splitsFile))) {
+    try (BufferedReader reader = newBufferedReader(Path.of(splitsFile))) {
       String split;
       while ((split = reader.readLine()) != null) {
         Text unencodedString = decode(split);
@@ -709,7 +708,7 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       final boolean binarySplits, final boolean encoded, final boolean sort,
       final boolean addBlankLine, final boolean repeat) throws IOException {
 
-    java.nio.file.Path splitsPath = java.nio.file.Paths.get(splitsFile);
+    java.nio.file.Path splitsPath = java.nio.file.Path.of(splitsFile);
     int insertAt = (len % 2 == 0) ? len / 2 : (len + 1) / 2;
     Collection<Text> sortedSplits = null;
     Collection<Text> randomSplits;
@@ -745,81 +744,6 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     }
   }
 
-  /**
-   * This test confirms the behaviour that when a table is created with the copy-configuration
-   * option that the properties that get set on the new table are the effective properties - that is
-   * the table properties include the system and namespace are copied into the table properties.
-   */
-  @Test
-  public void copyConfigOptionsTest() throws Exception {
-    String[] names = getUniqueNames(2);
-    String srcNS = "ns1"; // + names[0];
-
-    String srcTable = srcNS + ".src_table_" + names[1];
-    String destTable = srcNS + ".dest_table_" + names[1];
-
-    // define constants
-    final String sysPropName = "table.custom.my_sys_prop";
-    final String sysPropValue1 = "sys_value1";
-    final String sysPropValue2 = "sys_value2";
-    final String nsPropName = "table.custom.my_ns_prop";
-    final String nsPropValue1 = "ns_value1";
-    final String nsPropValue2 = "ns_value2";
-
-    ts.exec("config -s " + sysPropName + "=" + sysPropValue1);
-
-    ts.exec("createnamespace " + srcNS);
-    ts.exec("config -s " + nsPropName + "=" + nsPropValue1 + " -ns " + srcNS);
-
-    ts.exec("createtable " + srcTable);
-    ts.exec("createtable -cc " + srcTable + " " + destTable);
-
-    try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
-      Map<String,String> tids = accumuloClient.tableOperations().tableIdMap();
-
-      // used to grab values directly from ZooKeeper to bypass hierarchy
-      PropStore propStore = getCluster().getServerContext().getPropStore();
-
-      TableId destId = TableId.of(accumuloClient.tableOperations().tableIdMap().get(destTable));
-
-      // the Zk node should have all effective properties copied from configuration
-      var vp1 = propStore.get(TablePropKey.of(destId));
-      assertEquals(sysPropValue1, vp1.asMap().get(sysPropName));
-      assertEquals(nsPropValue1, vp1.asMap().get(nsPropName));
-
-      // check getTableProperties also inherits the effective config
-      Map<String,String> tableEffective =
-          accumuloClient.tableOperations().getTableProperties(destTable);
-      assertEquals(sysPropValue1, tableEffective.get(sysPropName));
-      assertEquals(nsPropValue1, tableEffective.get(nsPropName));
-
-      // changing the system and namespace props should leave the copied effective props unchanged
-      ts.exec("config -s " + sysPropName + "=" + sysPropValue2);
-      ts.exec("config -s " + nsPropName + "=" + nsPropValue2 + " -ns " + srcNS);
-
-      // source will still inherit from sys and namespace (no prop values)
-      var vp2 = propStore.get(TablePropKey.of(TableId.of(tids.get(srcTable))));
-      assertNull(vp2.asMap().get(sysPropName));
-      assertNull(vp2.asMap().get(nsPropName));
-
-      // dest (copied props) should remain local to the table, overriding sys and namespace
-      var vp3 = propStore.get(TablePropKey.of(TableId.of(tids.get(destTable))));
-      assertEquals(sysPropValue1, vp3.asMap().get(sysPropName));
-      assertEquals(nsPropValue1, vp3.asMap().get(nsPropName));
-
-      // show change propagated in source table effective hierarchy
-      tableEffective = accumuloClient.tableOperations().getConfiguration(srcTable);
-
-      assertEquals(sysPropValue2, tableEffective.get(sysPropName));
-      assertEquals(nsPropValue2, tableEffective.get(nsPropName));
-
-      // because effective config was copied, the change should not propagate to effective hierarchy
-      tableEffective = accumuloClient.tableOperations().getConfiguration(destTable);
-      assertEquals(sysPropValue1, tableEffective.get(sysPropName));
-      assertEquals(nsPropValue1, tableEffective.get(nsPropName));
-    }
-  }
-
   @Test
   public void copyTablePropsOnlyOptionsTest() throws Exception {
     String[] names = getUniqueNames(2);
@@ -829,21 +753,15 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     String destTable = srcNS + ".dest_table_" + names[1];
 
     // define constants
-    final String sysPropName = "table.custom.my_sys_prop";
-    final String sysPropValue1 = "sys_value1";
-    final String sysPropValue2 = "sys_value2";
     final String nsPropName = "table.custom.my_ns_prop";
     final String nsPropValue1 = "ns_value1";
     final String nsPropValue2 = "ns_value2";
-
-    ts.exec("config -s " + sysPropName + "=" + sysPropValue1);
 
     ts.exec("createnamespace " + srcNS);
     ts.exec("config -s " + nsPropName + "=" + nsPropValue1 + " -ns " + srcNS);
 
     ts.exec("createtable " + srcTable);
-    ts.exec("createtable --exclude-parent-properties --copy-config " + srcTable + " " + destTable,
-        true);
+    ts.exec("createtable --copy-properties " + srcTable + " " + destTable, true);
 
     try (AccumuloClient accumuloClient = Accumulo.newClient().from(getClientProps()).build()) {
       Map<String,String> tids = accumuloClient.tableOperations().tableIdMap();
@@ -851,62 +769,42 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
       // only table unique values should be stored in Zk node for the table.
       var vp1 = getCluster().getServerContext().getPropStore()
           .get(TablePropKey.of(TableId.of(tids.get(destTable))));
-      assertNull(vp1.asMap().get(sysPropName));
       assertNull(vp1.asMap().get(nsPropName));
 
       // check props were inherited in effective props
       Map<String,String> tableEffective =
           accumuloClient.tableOperations().getConfiguration(destTable);
-      assertEquals(sysPropValue1, tableEffective.get(sysPropName));
       assertEquals(nsPropValue1, tableEffective.get(nsPropName));
 
       // changing the system and namespace props should leave the effective props copied unchanged
-      ts.exec("config -s " + sysPropName + "=" + sysPropValue2);
       ts.exec("config -s " + nsPropName + "=" + nsPropValue2 + " -ns " + srcNS);
 
       // source will still inherit from sys and namespace (no prop values)
       var vp2 = getCluster().getServerContext().getPropStore()
           .get(TablePropKey.of(TableId.of(tids.get(srcTable))));
-      assertNull(vp2.asMap().get(sysPropName));
       assertNull(vp2.asMap().get(nsPropName));
 
       // dest (copied props) should remain local to the table, overriding sys and namespace
       var vp3 = getCluster().getServerContext().getPropStore()
           .get(TablePropKey.of(TableId.of(tids.get(destTable))));
-      assertNull(vp3.asMap().get(sysPropName));
       assertNull(vp3.asMap().get(nsPropName));
 
       // because effective config was not copied, the changes should propagate to effective
-      // hierarchy
+      // hierarchy. It may take a bit for settings changes to propagate
+      Wait.waitFor(() -> {
+        var tableEffective2 = accumuloClient.tableOperations().getConfiguration(destTable);
+        return nsPropValue2.equals(tableEffective2.get(nsPropName));
+      });
       tableEffective = accumuloClient.tableOperations().getConfiguration(destTable);
-      assertEquals(sysPropValue2, tableEffective.get(sysPropName));
       assertEquals(nsPropValue2, tableEffective.get(nsPropName));
     }
-  }
-
-  @Test
-  public void copyTablePropsInvalidOptsTest() throws Exception {
-    String[] names = getUniqueNames(2);
-
-    ts.exec("createtable " + names[0]);
-    ts.exec("createtable " + names[1]);
-
-    // test --expect-parent requires-cc expect this fail
-    ts.exec("createtable --exclude-parent " + names[0] + "dest", false);
-  }
-
-  @Test
-  public void missingSrcCopyPropsTest() throws Exception {
-    String[] names = getUniqueNames(2);
-    // test command fail if src is not available
-    ts.exec("createtable --exclude-parent -cc " + names[0] + " " + names[1], false);
   }
 
   @Test
   public void missingSrcCopyConfigTest() throws Exception {
     String[] names = getUniqueNames(2);
     /// test command fail if src is not available
-    ts.exec("createtable -cc " + names[0] + " " + names[1], false);
+    ts.exec("createtable -cp " + names[0] + " " + names[1], false);
   }
 
   @Test
@@ -917,17 +815,86 @@ public class ShellCreateTableIT extends SharedMiniClusterBase {
     ts.exec("createtable " + names[1]);
 
     // expect to fail because target already exists
-    ts.exec("createtable -cc " + names[0] + " " + names[1], false);
+    ts.exec("createtable -cp " + names[0] + " " + names[1], false);
   }
 
   @Test
-  public void optionOrderingTest() throws Exception {
-    String[] names = getUniqueNames(3);
+  public void testCreateTableCopiedConfig() throws Exception {
+    // tests that changes to default iterator settings on table1 are carried over to a new table2
+    // when created using the config of table1
+    final String[] tableNames = getUniqueNames(2);
+    final String table1 = tableNames[0];
+    final String table2 = tableNames[1];
 
-    ts.exec("createtable " + names[0]);
+    ts.exec("createtable " + table1, true);
+    for (IteratorUtil.IteratorScope iterScope : IteratorUtil.IteratorScope.values()) {
+      ts.exec("config -t " + table1 + " -d " + Property.TABLE_ITERATOR_PREFIX + iterScope.name()
+          + ".vers", true);
+      ts.exec("config -t " + table1 + " -s " + Property.TABLE_ITERATOR_PREFIX + iterScope.name()
+          + ".vers.opt.maxVersions=999", true);
+    }
 
-    ts.exec("createtable --exclude-parent --copy-config " + names[0] + " " + names[1], true);
-    ts.exec("createtable --copy-config " + names[0] + " --exclude-parent " + names[2], true);
+    ts.exec("createtable " + table2 + " -cp " + table1, true);
+    for (IteratorUtil.IteratorScope iterScope : IteratorUtil.IteratorScope.values()) {
+      var res = ts.exec(
+          "config -t " + table2 + " -f " + Property.TABLE_ITERATOR_PREFIX + iterScope.name(), true);
+      // verify deleted table1 prop is also deleted in table2
+      // note the space: ".vers "
+      assertFalse(res.contains(Property.TABLE_ITERATOR_PREFIX + iterScope.name() + ".vers "));
+      // verify changed table1 prop is also changed in table2
+      assertTrue(res
+          .contains(Property.TABLE_ITERATOR_PREFIX + iterScope.name() + ".vers.opt.maxVersions"));
+      assertTrue(res.contains("999"));
+    }
+  }
+
+  @Test
+  public void testCreateTableNoDefaults() throws Exception {
+    // tests the no defaults settings
+    final String table = getUniqueNames(1)[0];
+
+    ts.exec("createtable -ndtp " + table, true);
+
+    // verify no default iterator props
+    for (IteratorUtil.IteratorScope iterScope : IteratorUtil.IteratorScope.values()) {
+      var res = ts.exec(
+          "config -t " + table + " -f " + Property.TABLE_ITERATOR_PREFIX + iterScope.name(), true);
+      assertFalse(res.contains(Property.TABLE_ITERATOR_PREFIX + iterScope.name() + ".vers"));
+    }
+    // verify no default non-iterator props
+    // note filtering by "table.constraint" but checking output for "table.constraint."
+    // don't want to match command itself
+    var res = ts.exec("config -t " + table + " -f table.constraint", true);
+    assertFalse(res.contains(Property.TABLE_CONSTRAINT_PREFIX.getKey()));
+  }
+
+  @Test
+  public void testCreateTableMutuallyExclusiveCopyOpts() throws Exception {
+    final String[] tableNames = getUniqueNames(3);
+    final String optArg = "foo";
+    final String src = tableNames[0];
+    final String src2 = tableNames[1];
+    final String dest = tableNames[2];
+
+    ts.exec("createtable " + src, true);
+    ts.exec("createtable " + src2, true);
+
+    var res = ts.exec(String.format("createtable -cp %s -pf %s %s", src, optArg, dest), false);
+    assertTrue(res.contains("AlreadySelectedException"));
+
+    for (var copyOpt : List.of("-cp", "-pf")) {
+      for (var noArgPropOpt : List.of("-ndtp", "-evc")) {
+        res = ts.exec(String.format("createtable %s %s %s %s", noArgPropOpt, copyOpt, src, dest),
+            false);
+        assertTrue(res.contains("mutually exclusive with"));
+      }
+      for (var propOpt : List.of("-prop", "-i", "-f", "-l")) {
+        res = ts.exec(
+            String.format("createtable %s %s %s %s %s", propOpt, optArg, copyOpt, src, dest),
+            false);
+        assertTrue(res.contains("mutually exclusive with"));
+      }
+    }
   }
 
   private Collection<Text> generateNonBinarySplits(final int numItems, final int len) {
